--- a/.example.env
+++ b/.example.env
@@ -147,3 +147,10 @@ GRPC_CLIENT_RETRY_MAX_COUNT=10000
 GRPC_CLIENT_RETRY_DELAY=10000
 # GRPC_CLIENT_RETRY_STATUS_CODES массив полученных статусов ответа, для которых необходимо отправить повторный запрос.
 GRPC_CLIENT_RETRY_STATUS_CODES=4,14,timeout
+
+# ==== НАСТРОЙКИ CacheManagerModule ====
+REDIS_CACHE_MANAGER_TTL=
+REDIS_CACHE_MANAGER_HOST=
+REDIS_CACHE_MANAGER_PORT=
+REDIS_CACHE_MANAGER_MAX_DELAY_BEFORE_RECONNECT=
+REDIS_CACHE_MANAGER_COUNT_FOR_RESET_RECONNECT_STRATEGY=
