--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@grpc/grpc-js": "^1.13.4",
     "@grpc/proto-loader": "^0.7.15",
     "@grpc/reflection": "^1.0.4",
+    "@keyv/redis": "^5.1.1",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -42,6 +44,7 @@
     "@nestjs/terminus": "^11.0.0",
     "async_hooks": "^1.0.0",
     "axios": "^1.11.0",
+    "cache-manager": "^7.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie": "^1.0.2",
